--- a/Multilabel_test_1.ipynb
+++ b/Multilabel_test_1.ipynb
@@ -1,32 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CheXpert"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Flatten\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
+    "from keras.preprocessing import image\n",
     "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datasetPath = \"../dataset/CheXpert-v1.0-small\"\n",
-    "\n",
-    "# read only 100 rows\n",
-    "trainSet = pd.read_csv(datasetPath+\"/train.csv\", nrows=100)"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tqdm import tqdm\n",
+    "from keras.layers import BatchNormalization\n"
    ]
   },
   {
@@ -57,5 +47,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
