--- a/multilabel_example/multilabel_example_nb.ipynb
+++ b/multilabel_example/multilabel_example_nb.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +42,15 @@
     "# Merge train and test data into one dataset\n",
     "# Loop through train and test subsets\n",
     "\n",
-    "path_to_subset = f'dataset/'\n",
+    "path_to_dataset = f'dataset/'\n",
     "\n",
     "# Loop through all classes in subset\n",
-    "for folder in os.listdir(path_to_subset):\n",
+    "for folder in os.listdir(path_to_dataset):\n",
     "\n",
     "    # Loop through all images in each class\n",
-    "    for image in os.listdir(os.path.join(path_to_subset, folder)):\n",
+    "    for image in os.listdir(os.path.join(path_to_dataset, folder)):\n",
     "        # Defining path to image\n",
-    "        path_to_image = os.path.join(path_to_subset, folder, image)\n",
+    "        path_to_image = os.path.join(path_to_dataset, folder, image)\n",
     "        # Reading image using cv2\n",
     "        image = cv.imread(path_to_image)\n",
     "        # Resizing image\n",
@@ -60,12 +60,33 @@
     "\n",
     "        # Appending data and labels to X and Y lists\n",
     "        X.append(image)\n",
-    "        Y.append(label)\n",
-    "\n",
+    "        Y.append(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['green' 'shirt']\n",
+      " ['green' 'shirt']\n",
+      " ['green' 'shirt']\n",
+      " ...\n",
+      " ['blue' 'shoes']\n",
+      " ['blue' 'shoes']\n",
+      " ['blue' 'shoes']]\n"
+     ]
+    }
+   ],
+   "source": [
     "# Convert X to numpy array and scale values between 0 and 1\n",
     "X = np.array(X) / 255.0\n",
     "Y = np.array(Y)\n",
-    "\n",
+    "print(Y)\n",
     "# Binarize labels\n",
     "mlb = MultiLabelBinarizer()\n",
     "Y = mlb.fit_transform(Y)"
@@ -375,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grad Cam"
+    "## Gradient Activation Map"
    ]
   },
   {
